namespace REBUSS.VSexy.Model.Enums
{
    public enum AccessibilityLevel
    {
        Public,
        Private,
        Protected,
        Internal,
        ProtectedInternal,
        PrivateProtected
    }
}
