namespace REBUSS.VSexy.Model.Enums
{
    public enum RTypeKind
    {
        Class,
        Interface,
        Enum,
        Record,
        Struct
    }
}
