namespace REBUSS.VSexy.Model
{
    public class InterfaceReference
    {
        public string Name { get; set; }
        public string FullName { get; set; }
    }
}
